fixing spacing in services single for text

--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -117,3 +117,9 @@ section {
     color: $themegreen;
   }
 }
+
+.card-services a {
+  @extend .cta;
+  margin-top: 1.2em;
+  display: inline-block;
+}
