--- a/_scss/components/_home-4-icon-section.scss
+++ b/_scss/components/_home-4-icon-section.scss
@@ -73,7 +73,7 @@
 .icon-section-element__inner {
   h5, p {
     max-width: 450px;
-    margin: auto;
+    // margin: auto;
   }
 }
 
@@ -124,7 +124,7 @@
     h5, p {
       max-width: 450px;
       width: 100%;
-      margin: 0;
+      // margin: 0;
     }
   }
   
