--- a/_scss/pages/_services-landing.scss
+++ b/_scss/pages/_services-landing.scss
@@ -143,3 +143,9 @@
     }
   }
 }
+
+.content-block h2 {
+  font-size: 2.4em;
+  padding-top: 1em;
+  padding-bottom: 2em;
+}
